# my-finance

./: .env.example  .gitignore  CLAUDE.md  docker-compose.prod.yml  docker-compose.yml  readme.md  update.sh
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_investment_prompt.py  003_add_expense_fixed_expense_id.py  004_add_asset_link.py  005_remove_expense_payment_method_tags.py  006_add_ai_insights.py  007_add_deposit_withdraw_source_asset.py  008_add_auto_transfers_salary_asset.py  009_add_salary_amount.py  010_replace_payment_method_with_source_asset.py  011_rename_carryover_investment_to_transfer.py  012_add_asset_color.py  012_add_carryover_source_asset.py  013_expense_category_nullable.py  014_add_recurring_income.py  015_schema_v2_migration.py  5d9d1b08fe59_add_personal_api_key_columns_to_users.py  7a3e8c2f1d4b_add_default_allocation_and_carryover_tables.py  829e8ceed106_drop_news_tables.py  ce6317ef5e2d_add_missing_tables_budget_periods_.py  f4e46aec66d7_initial.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: celery_app.py  config.py  redis.py  security.py  tz.py
backend/app/models/: __init__.py  account.py  asset.py  auto_transfer.py  (+15 more)
backend/tests/: conftest.py  test_account_service.py  test_balance_edge_cases.py  test_budget_models.py  test_budget_service.py  test_entry_service.py  test_models.py  test_personal_api_key.py  test_schedule_edge_cases.py  test_schedule_service.py  test_security_search.py
(+335 files in other folders)
